fix for avoid overflow of messages if they're long

--- a/Milestone 3/assets/css/style.css
+++ b/Milestone 3/assets/css/style.css
@@ -194,11 +194,12 @@ li{
 .chat-messages .message{
     padding: 20px 50px 20px 20px;
     min-width: 10%;
-    max-width: 35%;
+    max-width: 60%;
     border-radius: 10px;
     font-size: 14px;
     margin-top: 20px;
     position: relative;
+    word-wrap: break-word;
 }
 
 .chat-messages .message.sent{
